// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render argument name 1`] = `
<span
  className="name"
>
  <Styled(Code)>
    Foo
  </Styled(Code)>
</span>
`;

exports[`renderer should render deprecated argument name 1`] = `
<span
  className="name isDeprecated"
>
  <Styled(Code)>
    Foo
  </Styled(Code)>
</span>
`;
